# cta-lstchain

./: .buildinfo  .codacy.yml  .gitignore  .mailmap  .travis.yml  LST1_Hillas.py  MANIFEST.in  README.md  README.rst  contribute.html  download_test_data.sh  environment.yml  genindex.html  index.html  introduction.html  lst_analysis_workflow.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  snippets.html  version.py
.github/: release-drafter.yml
POC_ROV_to_DL0/: POC.md
_sources/: index.rst.txt
_static/: documentation_options.js
api/: lstchain.calib.camera.load_calibrator_from_config.html  lstchain.calib.load_calibrator_from_config.html  lstchain.calib.load_gain_selector_from_config.html  lstchain.calib.load_image_extractor_from_config.html  lstchain.datachecks.containers.DL1DataCheckContainer.html  lstchain.datachecks.containers.DL1DataCheckHistogramBins.html  lstchain.datachecks.containers.count_trig_types.html  lstchain.datachecks.dl1_checker.check_dl1.html  lstchain.datachecks.dl1_checker.merge_dl1datacheck_files.html  lstchain.datachecks.dl1_checker.plot_datacheck.html  lstchain.datachecks.dl1_checker.plot_mean_and_stddev.html  lstchain.datachecks.dl1_checker.plot_trigger_types.html  lstchain.datachecks.dl1_checker.process_dl1_file.html  lstchain.datachecks.dl1_checker.write_error_page.html  lstchain.high_level.hdu_table.add_icrs_position_params.html  lstchain.high_level.hdu_table.create_event_list.html  lstchain.high_level.hdu_table.create_hdu_index_hdu.html  (+210 more)
docs/: Makefile  analysis.rst  (+12 more)
(+787 files in other folders)
