[metadata]
name = lstchain
description = Analysis chain for the CTA-LST prototype
author = LST collaboration
author_email = rlopezcoto@gmail.com
license = MIT
url=https://github.com/cta-observatory/cta-lstchain
long_description = file: README.md
long_description_content_type = text/markdown
github_project = cta-observatory/cta-lstchain
